Added spaghetti to the recipe

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 
     <main>
 
-        <a href="therecipes/lasagna.html">Lasagna Recipe</a>
+        <menu>
+            <ul>
+                <li><a href="therecipes/lasagna.html">Lasagna Recipe</a></li>
+                <li><a href="therecipes/spaghetti.html">Spaghetti Recipe</a></li>
+            </ul>
+        </menu>
 
     </main>
 
     <footer>
-
+        
     </footer>
 
 </body>
