Finish the itallian spaghetti recipe

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <menu>
             <ul>
                 <li><a href="therecipes/lasagna.html">Lasagna Recipe</a></li>
-                <li><a href="therecipes/spaghetti.html">Spaghetti Recipe</a></li>
+                <li><a href="therecipes/spaghetti.html">Itallian Spaghetti Recipe</a></li>
             </ul>
         </menu>
 
