Add pizza to the recipe

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <ul>
                 <li><a href="therecipes/lasagna.html">Lasagna Recipe</a></li>
                 <li><a href="therecipes/spaghetti.html">Itallian Spaghetti Recipe</a></li>
+                <li><a href="therecipes/pizza.html">Pepperoni Pizza Recipe</a></li>
             </ul>
         </menu>
 
