--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
     <header>
 
-        <h1>Odin Recipes</h1>
+        <div class="header-background">
+            <h1 class="main-title">Odin Recipes</h1>
+
+            <div class="navigation-bar">
+                <nav>
+                    <menu class="nav">
+                        <div class="links-to-recipes">
+                            <a href="therecipes/lasagna.html">Lasagna Recipe</a>
+                            <a href="therecipes/spaghetti.html">Itallian Spaghetti Recipe</a>
+                            <a href="therecipes/pizza.html">Pepperoni Pizza Recipe</a>
+                        </div>
+                    </menu>
+                </nav>
+            </div>
+
+        </div>
 
     </header>
 
     <main>
 
-        <menu>
-            <ul>
-                <li><a href="therecipes/lasagna.html">Lasagna Recipe</a></li>
-                <li><a href="therecipes/spaghetti.html">Itallian Spaghetti Recipe</a></li>
-                <li><a href="therecipes/pizza.html">Pepperoni Pizza Recipe</a></li>
-            </ul>
-        </menu>
+        
 
     </main>
 
