--- a/therecipes/spaghetti.html
+++ b/therecipes/spaghetti.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="recipes.css">
 </head>
 <body>
 
     <header>
         <h1>Itallian Spaghetti</h1>
+        <img src="../images/spaghetti.jpeg" alt="Picture of Itallian Spaghetti">
+        <br>
     </header>
 
     <main>
 
-        <img src="../images/spaghetti.jpeg" alt="Picture of Itallian Spaghetti">
-        <br>
         <h2>Description</h2>
 
         <p>Italian spaghetti is a quintessential dish celebrated for its elegant simplicity and deeply rooted heritage in Italian cuisine. The dish consists primarily of spaghetti noodles—long, thin strands of pasta made from durum wheat semolina. Traditionally, spaghetti is cooked al dente, which means it is firm to the bite, a quality highly prized in Italian pasta cooking.
