Align 'for cheese filling' in lasagna.html

--- a/therecipes/lasagna.html
+++ b/therecipes/lasagna.html
@@ -45,7 +45,7 @@
                             <li>Salt and pepper to taste</li>
                         </ul>
                         
-                                <h3>For the cheese filling:</h3>
+                                <h3 class="ingredients-h3">For the cheese filling:</h3>
                         <ul class="ingredients-ul">
                             <li>15 ounces (425g) ricotta cheese</li>
                             <li>1 egg</li>
