--- a/therecipes/lasagna.html
+++ b/therecipes/lasagna.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
     <link rel="stylesheet" href="recipes.css">
 </head>
 <body>
 
-    <div class="background-img">
-        <header>
-            <div class="div-for-title">
-                <h1 class="page-title">Lasagna</h1>
-            </div>
-            <img src="../images/lasagna.jpeg" alt="Picture of a cooked lasagna"><br>
-        </header>
+    <div class="container">
+        <div class="background-img">
+            <header>
+                <div class="div-for-title">
+                    <h1 class="page-title">Lasagna</h1>
+                </div>
+                <img src="../images/lasagna.jpeg" alt="Picture of a cooked lasagna"><br>
+            </header>
+        </div>
     </div>
+
     
 
     <main>
