--- a/therecipes/spaghetti.html
+++ b/therecipes/spaghetti.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
     <link rel="stylesheet" href="recipes.css">
 </head>
 <body>
 
-    <div class="background-img">
+    <div class="background-img-spaghetti">
         <header>
             <div class="div-for-title">
                 <h1 class="page-title">Itallian Spaghetti</h1>
